--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build-css": "gulp buildCss",
-    "dev":       "gulp"
+    "dev": "gulp"
   },
   "repository": {
     "type": "git",
@@ -19,9 +19,11 @@
   },
   "homepage": "https://bitbucket.org/leolearningbrasil/desafio-revvo#readme",
   "devDependencies": {
+    "autoprefixer": "^10.4.21",
     "browser-sync": "^3.0.4",
     "gulp": "^5.0.1",
-    "gulp-autoprefixer": "^9.0.0",
-    "gulp-sass": "^6.0.1"
+    "gulp-postcss": "^10.0.0",
+    "gulp-sass": "^6.0.1",
+    "sass": "^1.89.2"
   }
 }
